<resources>
    <string name="app_name">Assignment_minhnqph31902</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="never_miss_your_tasks">Never miss your tasks</string>
    <string name="skip">Skip</string>
    <string name="welcome_title_one">Manage your tasks</string>
    <string name="welcome_title_two">Create daily routine</string>
    <string name="welcome_title_three">Orgonaize your tasks</string>
    <string name="welcome_description_one">You can easily manage all of your daily tasks in DoMe for free</string>
    <string name="welcome_description_two">In Uptodo  you can create your personalized routine to stay productive</string>
    <string name="welcome_description_three">You can organize your daily tasks by adding your tasks into separate categories</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_to_the">Welcome to the</string>
    <string name="to_do_list">To Do List</string>
    <string name="next">Next</string>
    <string name="demo">This is a simple todo app</string>
    <string name="welcome_demo">Welcome to Todo App</string>
    <string name="nqmgaming">\@nqmgaming</string>
    <string name="enter_your_email">Enter your email…</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_your_password"><u>Forgot password ?</u></string>
    <string name="login">Login</string>
    <string name="login_register"><u>Login</u></string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="or">OR</string>
    <string name="register"><u>Register</u></string>
    <string name="registert">Register</string>
    <string name="create_an_account">Create an account</string>
    <string name="never_miss_your_work_again">Never miss your works and tasks again</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="facebook">facebook</string>
    <string name="google">google</string>
    <string name="apple">apple</string>
    <string name="logo">logo</string>
    <string name="back">back</string>
    <string name="don_t_worry_we_ll_send_you_reset_instructions">Don\'t worry, we\'ll send you reset instructions.</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="if_you_dont_t_have_an_account">If you dont\'t have an account,</string>
    <string name="register_here"><u>Register here.</u></string>
    <string name="must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="nguyenquangminh570_gmail_com">nguyenquangminh570@gmail.com</string>
    <string name="set_new_password_for">Set New Password For</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="calendar">Calendar</string>
    <string name="email">Email</string>
    <string name="agree">By Logging in and Registering, you agree to our <u>Terms</u> and <u>Conditions</u></string>
    <string name="what_do_you_want_to_do">What do you want to do?</string>
    <string name="description">Description...</string>
    <string name="edit_todo">Edit Todo</string>
    <string name="add_todo">Add Todo</string>
</resources>