<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:orderInCategory="100"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        android:icon="@drawable/search"
        android:title="@string/search" />
    <item
        android:id="@+id/calendar"
        android:orderInCategory="100"
        android:icon="@drawable/calendar"
        android:title="@string/calendar" />
    <item
        android:id="@+id/user"
        android:orderInCategory="100"
        android:icon="@drawable/user"
        android:title="@string/profile" />
</menu>