<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.WelcomeActivity">
    
    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_the"
        android:layout_marginTop="30sp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtToDoList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_do_list"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#EFAE71"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:id="@+id/viewPager"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/txtToDoList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <me.relex.circleindicator.CircleIndicator
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:paddingHorizontal="10dp"
        android:id="@+id/indicator"
        app:ci_drawable="@drawable/background_circel_red"
        app:ci_width="5dp"
        app:ci_height="5dp"
        app:ci_margin="5dp"
        app:ci_orientation="horizontal"
        app:ci_gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/viewPager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/btnNext"
        app:backgroundTint="@null"
        android:textSize="25sp"
        android:background="@drawable/background_button_get_started"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/indicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textSize="18sp"
        app:backgroundTint="#FFFFFF"
        android:textColor="@color/black"
        android:id="@+id/btnSkip"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nqmgaming"
        android:textSize="15sp"
        android:padding="10dp"
        android:textColor="#4D4444"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>