<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Account.ForgotPasswordActivity">
    <ImageButton
        android:id="@+id/btnBackForgotPasswordOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_24"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imgFingerprint"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:lottie_speed="0.5"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_marginTop="125dp"
        android:layout_marginBottom="16dp"
        app:lottie_rawRes="@raw/finger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:lottie_speed="-0.5"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_marginTop="125dp"
        android:layout_marginBottom="16dp"
        app:lottie_rawRes="@raw/finger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Forgot Your Password?"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFingerprint" />

    <TextView
        android:id="@+id/tvForgotPasswordDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/don_t_worry_we_ll_send_you_reset_instructions"
        android:textColor="#5D5A5A"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/iplUsernameForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPasswordDescription"
        app:startIconDrawable="@drawable/user">

        <EditText
            android:id="@+id/edtUsernameForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="emailAddress"
            android:hint="Username"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/iplEmailForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iplUsernameForgotPassword"
        app:startIconDrawable="@drawable/mail">

        <EditText
            android:id="@+id/edtEmailForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_btn_login"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/iplEmailForgotPassword"
        app:layout_constraintStart_toStartOf="@+id/iplEmailForgotPassword"
        app:layout_constraintTop_toBottomOf="@+id/iplEmailForgotPassword" />

    <TextView
        android:id="@+id/tvBackToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:text="@string/back_to_login"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/baseline_arrow_back_24"
        app:layout_constraintEnd_toEndOf="@+id/btnResetPassword"
        app:layout_constraintStart_toStartOf="@+id/btnResetPassword"
        app:layout_constraintTop_toBottomOf="@+id/btnResetPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBackToLogin">

        <TextView
            android:id="@+id/tvDontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:text="@string/if_you_dont_t_have_an_account" />

        <TextView
            android:id="@+id/tvRegisterHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/register_here"
            android:textColor="#EFAE71" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>